test: add unit tests for Pokémon search